@@ -2,7 +2,8 @@
 v3.0.0alpha5
 ------------
 
-
+[rla] Added PSR-11 compatible interfaces.
+|+
 
 
 ------------
